--- a/src/langgraphagenticai/ui/uiconfigfile.ini
+++ b/src/langgraphagenticai/ui/uiconfigfile.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph : Build stateful Agentic AI graph 
-LLM_OPTIONS = Groq
+LLM_OPTIONS = Groq, OpenAI
 USECASE_OPTIONS = Basic Chatbot, Chatbot with Tool
 GROQ_MODEL_OPTIONS = deepseek-r1-distill-llama-70b, gemma2-9b-it, llama3-70b-8192
+OPENAI_MODEL_OPTIONS = o4-mini, o3
